tests/e2e/function_return_service_without_type.error
Error: syntax error in story at line 2

2|        return random integer low: 10 high: 100
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0110: `return` expected. Did you miss to add `returns int`?
