tests/e2e/function_return_service_without_type.story
function random
    return random integer low: 10 high: 100
